# collatz_py

./: README.md  pyproject.toml
src/collatz_py/: __init__.py  collatz.py  util.py
